--- a/BusMaintenanceDashboard/templates/bus_info.html
+++ b/BusMaintenanceDashboard/templates/bus_info.html
@@ -2,26 +2,29 @@
 {% load static %}
 
 {% block content %}
-    <div class="card">
-        <div class="card-header">
-            <h3 class="card-title"><font style="font-weight: bold;">VAE 7466 | <font style="color:red">WARNING</font> </h3></font></br>
-            <small>2023-04-30 14:00 | [VIEW FORECAST]</small>
-        </div>
-        <div class="card-body"> 
-            <p>ENGINE COOLANT TEMPERATURE SHOW INCREASING TREND. POSSIBLE FAILURE MAY OCCUR.</p>
-            <!-- <p>Other Information: {{ bus.other_info }}</p> -->
-        </div>
-    </div>
-    {% for bus in buses %}
-        <div class="card">
-            <div class="card-header">
-                <h3 class="card-title"><font style="font-weight: bold;">{{ bus }} | <font style="color:lightgreen">GOOD</font> </h3></font></br>
-                <small>2023-04-30 14:00 | [VIEW FORECAST] </small>
+    {% if alarming_buses %}
+        <h2>{{ alarming_buses|length }} number of alerts</h2>
+        {% for bus in alarming_buses %}
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        <font style="font-weight: bold;">{{ bus.vehicle_id }} | 
+                        <font style="color:red">WARNING</font>
+                        </h3>
+                    </font>
+                    <small>
+                        <a href="/plot_forecast/?veh_id={{ bus.vehicle_id }}&param={{ bus.parameter }}">
+                            [VIEW FORECAST]
+                        </a>
+                    </small>
+                    
+                </div>
+                <div class="card-body">
+                    <p>ALARM: {{ bus.parameter }} value of {{ bus.value }} exceeds threshold of {{ bus.threshold }}.</p>
+                </div>
             </div>
-            <div class="card-body"> 
-                <p>NO ANOMALY DETECTED. FORECAST SHOWS NORMAL OPERATIONS. DOWNTIME UNLIKELY</p>
-                <!-- <p>Other Information: {{ bus.other_info }}</p> -->
-            </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    {% else %}
+        <p>No Alarming Buses!</p>
+    {% endif %}
 {% endblock %}
