--- a/BusMaintenanceDashboard/templates/custom_sidebar.html
+++ b/BusMaintenanceDashboard/templates/custom_sidebar.html
@@ -9,19 +9,11 @@
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column">
-          <!-- <li class="nav-item">
-            <a href="{% url 'dashboard' %}" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Dashboard
-              </p>
-            </a>
-          </li> -->
           <li class="nav-item">
             <a href="{% url 'bus_info' %}" class="nav-link">
-              <i class="nav-icon fas fa-bus"></i>
+              <i class="nav-icon fas fa-exclamation-triangle"></i>
               <p>
-                Buses
+                Alert
               </p>
             </a>
           </li>
@@ -61,7 +53,71 @@
             <a href="{% url 'plot_forecast' %}" class="nav-link">
               <i class="nav-icon fas fa-chart-area"></i>
               <p>
-                Plot Forecast
+                Parameter Forecast
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-bus"></i>
+              <p>
+                Assets
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-calendar-check"></i>
+              <p>
+                Maintenance Schedules
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-chart-line"></i>
+              <p>
+                Historical Data
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-sliders-h"></i>
+              <p>
+                Configuration
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-file-alt"></i>
+              <p>
+                Reporting and Analytics
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-users-cog"></i>
+              <p>
+                User Management
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-clipboard-list"></i>
+              <p>
+                System Log
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'bus_info' %}" class="nav-link">
+              <i class="nav-icon fas fa-question-circle"></i>
+              <p>
+                Help & Support
               </p>
             </a>
           </li>
